[gd_scene load_steps=18 format=3 uid="uid://83ivxjek7n3p"]

[ext_resource type="Texture2D" uid="uid://bqjdbm2gw3hh0" path="res://Assets/Icons/farm_icon_white.png" id="1_kh38d"]
[ext_resource type="Script" uid="uid://cl2nnhegve851" path="res://Scenes/plant_health_scan_modal.gd" id="1_wkw8o"]
[ext_resource type="Texture2D" uid="uid://k1ixag2t3jkq" path="res://Assets/Icons/back_icon_white.png" id="2_d7o7k"]
[ext_resource type="FontFile" uid="uid://b5ofmvuwbvdxo" path="res://Assets/Fonts/argentum-sans.black.ttf" id="2_wkw8o"]
[ext_resource type="Script" uid="uid://bcnyg4qos0dr7" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="3_d7o7k"]
[ext_resource type="Script" uid="uid://mr2fibppbyip" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="4_ddgtb"]
[ext_resource type="FontFile" uid="uid://dtg8qxe14m8ef" path="res://Assets/Fonts/argentum-sans.medium.ttf" id="5_oq08h"]
[ext_resource type="StyleBox" uid="uid://dmr560corx08x" path="res://Scenes/upload_image_button.tres" id="6_m4c5s"]
[ext_resource type="Texture2D" uid="uid://dmavg5nguhwk6" path="res://Assets/Icons/camera_icon_white.png" id="7_553c7"]
[ext_resource type="FontFile" uid="uid://caw5hde3doeyx" path="res://Assets/Fonts/argentum-sans.semibold.ttf" id="8_my57c"]
[ext_resource type="StyleBox" uid="uid://dr025og5g28m0" path="res://Assets/StyleRes/auth_screen.tres" id="9_pi7pr"]

[sub_resource type="Resource" id="Resource_l0ub0"]
script = ExtResource("4_ddgtb")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_up55o"]
script = ExtResource("4_ddgtb")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ie7eg"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
border_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.247059)
shadow_size = 10
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yxj8g"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
border_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.219608)
shadow_size = 20
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogk8k"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 0.0
content_margin_bottom = 20.0
bg_color = Color(0.205117, 0.205117, 0.205117, 0.560784)
border_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.192157)
shadow_size = 20
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qiamd"]
bg_color = Color(0.337255, 0.337255, 0.337255, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PlantHealthScanModal" type="VBoxContainer"]
z_index = 99
custom_minimum_size = Vector2(689, 1214)
anchors_preset = -1
anchor_left = 0.0215278
anchor_top = 0.0257812
anchor_right = 0.978472
anchor_bottom = 0.974219
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wkw8o")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="BackButton" type="TextureButton" parent="HBoxContainer2"]
modulate = Color(0.707967, 0.707967, 0.707966, 1)
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
texture_normal = ExtResource("2_d7o7k")
ignore_texture_size = true
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2

[node name="BarButtonIcon" type="TextureRect" parent="HBoxContainer2"]
modulate = Color(0.878431, 0.878431, 0.878431, 1)
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
texture = ExtResource("1_kh38d")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("2_wkw8o")
theme_override_font_sizes/font_size = 40
text = "Plant Health Scan"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 1070)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="SmoothScrollContainer" type="ScrollContainer" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
scroll_horizontal = -23
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
script = ExtResource("3_d7o7k")
wheel_scroll_damper = SubResource("Resource_l0ub0")
dragging_scroll_damper = SubResource("Resource_up55o")
metadata/_custom_type_script = "uid://bcnyg4qos0dr7"

[node name="ContentContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(635, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("5_oq08h")
theme_override_font_sizes/font_size = 20
text = "Plant Image"

[node name="Button" type="Button" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
mouse_filter = 1
theme_override_styles/focus = ExtResource("6_m4c5s")
theme_override_styles/hover = ExtResource("6_m4c5s")
theme_override_styles/pressed = ExtResource("6_m4c5s")
theme_override_styles/normal = ExtResource("6_m4c5s")

[node name="PlantImage" type="TextureRect" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer/Button"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer/Button/PlantImage"]
custom_minimum_size = Vector2(359, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.21657
anchor_top = 0.539681
anchor_right = 0.769729
anchor_bottom = 0.783014
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_fonts/font = ExtResource("5_oq08h")
theme_override_font_sizes/font_size = 30
text = "Press to upload an
image"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 161
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer/Button/PlantImage"]
modulate = Color(0.658824, 1, 0.0156863, 1)
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.43999
anchor_top = 0.313014
anchor_right = 0.53244
anchor_bottom = 0.513014
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_553c7")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("5_oq08h")
theme_override_font_sizes/font_size = 20
text = "Crop Type"

[node name="CropType" type="LineEdit" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer" groups=["PlantScanFields"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
mouse_filter = 1
theme_override_colors/caret_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_placeholder_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_uneditable_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("8_my57c")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_ie7eg")
theme_override_styles/read_only = SubResource("StyleBoxFlat_yxj8g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ogk8k")

[node name="Label3" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("5_oq08h")
theme_override_font_sizes/font_size = 20
text = "Note"

[node name="CropType2" type="TextEdit" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer" groups=["PlantScanFields"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_placeholder_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/caret_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("8_my57c")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_ogk8k")
theme_override_styles/focus = SubResource("StyleBoxFlat_ie7eg")
theme_override_styles/read_only = SubResource("StyleBoxFlat_yxj8g")
text = "dadaddad"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LoginButton" type="Button" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/ContentContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(615, 75)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_oq08h")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = ExtResource("9_pi7pr")
theme_override_styles/disabled = SubResource("StyleBoxFlat_qiamd")
theme_override_styles/hover = ExtResource("9_pi7pr")
theme_override_styles/pressed = ExtResource("9_pi7pr")
theme_override_styles/normal = ExtResource("9_pi7pr")
text = "Submit"

[connection signal="pressed" from="HBoxContainer2/BackButton" to="." method="_on_back_button_pressed"]
